Add Discounts section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
             <div class="banners__controls--right"></div>
           </div>
         </section>
+        <!-- DISCOUNTS -->
+        <section class="discounts">
+          <div class="discounts__header">
+            <div class="discounts__title">
+              <span class="material-symbols-outlined">sell</span>
+              <h2>Discounted goods</h2>
+            </div>
+            <div class="discounts__all">
+              <p>View all</p>
+              <span class="material-symbols-outlined">chevron_right</span>
+            </div>
+          </div>
+          <div class="discounts__body">
+            <div class="discount"></div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="index.js"></script>
