Start with cards styles

--- a/index.html
+++ b/index.html
@@ -98,13 +98,31 @@
               <span class="material-symbols-outlined">sell</span>
               <h2>Discounted goods</h2>
             </div>
-            <div class="discounts__all">
-              <p>View all</p>
-              <span class="material-symbols-outlined">chevron_right</span>
-            </div>
+            <a href="#">View all &rarr;</a>
           </div>
           <div class="discounts__body">
-            <div class="discount"></div>
+            <div class="discount">
+              <div class="discount__header">
+                <figure>
+                  <img src="./assets/img/cake.png" alt="Chocolate Cake" />
+                </figure>
+                <div class="discount__score">
+                  <span class="material-symbols-outlined">star</span>
+                  <p>4.5/5</p>
+                </div>
+              </div>
+              <div class="discount__body">
+                <h2>Chocolate Cake</h2>
+                <div class="discount__bottom">
+                  <button class="discount__button">Add +</button>
+                  <div class="discount__stats">
+                    <p>$20</p>
+                    <p>$18</p>
+                    <p>2kg</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
